--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </h1>
         <br />
         <h5>Pay Bills.&nbsp;&nbsp;Buy Airtime.&nbsp;&nbsp; Invest</h5>
+        <button class="btn btn-lg btn-primary mt-3">GET STARTED</button>
       </section>
     </header>
     <br /><br /><br />
